# protonshortcut

./: Cargo.toml  README.md
src/: linker.rs  main.rs
